tests/NormalTests/paczka2/big_fuzzy/64092349.err
Error in line 2: GXM S347 40,0
Error in line 4: Iv3J S675 59,9
Error in line 22: S347 S347 61,6
Error in line 32: 8La9mBA A17 66,4
Error in line 36: Iv3J S675 43,9
Error in line 45: Iv3J A17 11,7
Error in line 49: GXM S347 23,5
Error in line 53: JnzW9KT S347 89,3
Error in line 54: JnzW9KT A17 77,7
Error in line 55: JnzW9KT S347 89,5
Error in line 56: JnzW9KT S675 99,0
Error in line 57: JnzW9KT S593 26,2
Error in line 73: Iv3J S347 147,6
Error in line 83: S347 A17 95,1
Error in line 85: S347 S593 4,8
Error in line 87: S347 A17 54,2
Error in line 72: JnzW9KT S347 43,5
Error in line 88: S347 S347 20,1
Error in line 97: Iv3J A17 16,9
Error in line 96: S347 S675 724,3
Error in line 107: 8La9mBA S593 7,2
Error in line 117: S347 S593 12,9
Error in line 121: T3sWdQOcN A17 53,8
Error in line 118: Iv3J S593 22,0
Error in line 119: S347 A17 84,9
Error in line 113: GXM S347 4,8
Error in line 129: Iv3J S675 0,8
Error in line 134: Iv3J S593 20,6
Error in line 136: 8La9mBA S675 76,0
Error in line 133: JnzW9KT S593 71,1
Error in line 149: S347 S675 13,4
Error in line 147: T3sWdQOcN S347 83,0
Error in line 143: uqsYEtH S675 29,4
Error in line 154: uqsYEtH S593 6,8
Error in line 155: uqsYEtH S675 38,8
Error in line 167: 8La9mBA S593 3,8
Error in line 175: Iv3J S675 135,4
Error in line 180: Iv3J S347 31,4
Error in line 190: JnzW9KT A17 99,8
Error in line 202: S347 A17 70,32
Error in line 237: GXM S347 44,49
Error in line 241: JnzW9KT A17 63,0
Error in line 243: JnzW9KT S347 100,0
Error in line 210: 8La9mBA S347 62,3
